# design-patterns

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  404.html  Makefile  book.toml  chapter_1.html  index.html  mypy.ini  print.html  pyproject.toml  rationals.html  searchindex.js  searchindex.json
.github/workflows/: book.yaml  test.yaml
patterns/: __init__.py
patterns/fintech/: __init__.py
patterns/fintech/trading/: __init__.py  strategy.py
patterns/flyweight/: __init__.py  ctypes.py  decimal.py  fractions.py
patterns/flyweight/numbers/: __init__.py
patterns/memento/: __init__.py
src/: SUMMARY.md  flyweight.md  rationals.md  sternbrocot-tree.md  strategies.md
src/fintech/trading/: strategies.md
tests/patterns/: .test_memento.py.swp  test_flyweight_decimal.py  test_memento.py
tests/patterns/flyweight/: test_ctypes.py
