[tool.poetry]
name = "design-patterns"
version = "0.1.0"
description = ""
authors = ["Dmtrs Flaco Meng <tydeas.dr@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
guppy3 = "^3.1.2"
ipython = "^8.4.0"
pytest-watch = "^4.2.0"
pytest-mypy = "^0.9.1"
pre-commit = "^2.19.0"

[tool.isort]
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
